完成tool-bar组件的部分，其余的需要配合list进行

--- a/src/assets/scss/method.scss
+++ b/src/assets/scss/method.scss
@@ -11,6 +11,10 @@ $bgColor: #fafafa;
 $borderColorLight: #edeeee;
 $borderColorDark: #515151;
 
+.mgr5{
+  margin-right: 5px;
+}
+
 table{
   font-size: 0.8em;
   width: 100%;
