--- a/src/assets/scss/method.scss
+++ b/src/assets/scss/method.scss
@@ -15,6 +15,31 @@ $borderColorDark: #515151;
   margin-right: 5px;
 }
 
+
+@mixin bottom-line($left: 0px,$right: 0px, $bottom: 0px, $height: 1px, $color: #333) {
+  position: relative;
+
+  &:after{
+    content: '';
+    position: absolute;
+    left: $left;
+    right: $right;
+    bottom: $bottom;
+    height: $height;
+    background-color: $color;
+    opacity: 0;
+    transform: scale(0);
+    transition: all 300ms;
+  }
+
+  &:hover{
+    &:after{
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+}
+
 table{
   font-size: 0.8em;
   width: 100%;
